--- a/sgseraya.html
+++ b/sgseraya.html
@@ -70,7 +70,7 @@
             const estateData = {
                 "id": "sgseraya",
                 "name": "Ladang Sungai Seraya",
-                "reportInfo": "Data based on PA Report (Jun 2025) & Agronomy Report (Apr 2025). Visit Date: 16th June 2025.",
+                "reportInfo": "Data based on PA Report (Jun 2025) & Agronomy Report (Sep 2025). Visit Date: 18th September 2025.",
                 "summaryMetrics": {
                     "area": {
                         "title": "Estate Area",
@@ -80,40 +80,40 @@
                         ]
                     },
                     "yield": {
-                        "title": "Yield/Ha (YTD May '25 vs Budget)",
-                        "value": "7.94 / 8.27 MT",
-                        "note": "-4% vs budget"
+                        "title": "Yield/Ha (YTD Aug '25 vs Target)",
+                        "value": "15.44 / 17.95 MT",
+                        "note": "-14% vs target (Source: AR)"
                     },
                     "cost": {
                         "title": "FFB Cost/Tonne (YTD May '25 vs Budget)",
                         "value": "RM 247.70 / RM 300.52",
-                        "note": "18% lower than budget"
+                        "note": "18% lower than budget (Source: PAR)"
                     },
-                    "labour": {
-                        "title": "Labour Status",
-                        "value": "Adequate",
-                        "note": "1:13 ha ratio"
+                    "pests": {
+                        "title": "P&D Status",
+                        "value": "High (Rats, Ganoderma)",
+                        "note": "Rats now <10%; Ganoderma increasing"
                     },
                      "pruning": {
                         "title": "Pruning Quality",
                         "value": "Satisfactory",
-                        "note": "Frond stacking needs improvement"
+                        "note": "Frond snapping due to water stress"
                     }
                 },
                 "keyMetrics": [
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-blue-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z' /></svg>", "label": "Labour Ratio", "value": "1:13 ha (Adequate)" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-green-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z' /></svg>", "label": "P&D Status", "value": "Under Control (Rats)" },
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-red-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z' /></svg>", "label": "P&D Status", "value": "High (Rats, Ganoderma)" },
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-yellow-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M13 10V3L4 14h7v7l9-11h-7z' /></svg>", "label": "OER % (YTD May '25)", "value": "19.03%" },
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-red-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z' /></svg>", "label": "Harvester Prod.", "value": "2.27 MT/md (Average)" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-purple-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z' /></svg>", "label": "Harvest Interval", "value": "< 15 days (Good)" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-teal-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17.657 18.343A8 8 0 016.343 7.029m11.314 11.314a8 8 0 01-11.314-11.314m2.121 13.435a2 2 0 01-2.828 0l-2.122-2.121a2 2 0 010-2.828l5.656-5.657a2 2 0 012.829 0l2.121 2.121a2 2 0 010 2.828l-5.657 5.657z' /></svg>", "label": "Nutrient Status", "value": "Suboptimal (N, P, Mg)" }
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-purple-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z' /></svg>", "label": "Harvest Interval", "value": "13-18 days (Acceptable)" },
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-teal-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17.657 18.343A8 8 0 016.343 7.029m11.314 11.314a8 8 0 01-11.314-11.314m2.121 13.435a2 2 0 01-2.828 0l-2.122-2.121a2 2 0 010-2.828l5.656-5.657a2 2 0 012.829 0l2.121 2.121a2 2 0 010 2.828l-5.657 5.657z' /></svg>", "label": "Nutrient Status", "value": "Suboptimal (N, K, Mg)" }
                 ],
                 "chartData": {
                     "production": {
-                        "labels": ["Jan", "Feb", "Mar", "Apr", "May"],
-                        "ffb": [1005.56, 686.24, 1518.72, 1067.45, 1653.82], // Approximation from yield table
-                        "rainfall": [260.0, 80.5, 102.5, 198.0, 127.5],
-                        "note": "*FFB production and rainfall data for 2025 (YTD May)."
+                        "labels": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug"],
+                        "ffb": [1021.90, 938.24, 1320.50, 1620.37, 2016.12, 2142.42, 2275.90, 2110.30],
+                        "rainfall": [260.0, 80.5, 102.5, 198.0, 127.5, 76.5, 44.0, 77.0],
+                        "note": "*FFB production and rainfall data for 2025 (YTD Aug). (Source: AR Pg. 46, 48)"
                     },
                     "ageProfile": {
                         "labels": ["Prime Mature (8-19Y)", "Old Mature (20-25Y)"],
@@ -123,12 +123,13 @@
                     }
                 },
                 "observations": [
-                    "<b>Satisfactory Performance:</b> FFB production cost is 18% below budget, and the estate is expected to meet its annual yield target despite a slight deficit YTD. <span class='observation-ref'>(PAR Pg. 35)</span>",
-                    "<b>Delayed Upkeep:</b> Weeding and manuring works are behind schedule and need to be expedited to catch up with the program. <span class='observation-ref'>(PAR Pg. 36)</span>",
-                    "<b>Vigorous Weed Growth:</b> Nephrolepis growth is obstructing operations in fields P02E and P08F and needs to be controlled. <span class='observation-ref'>(PAR Pg. 14)</span>",
-                    "<b>Good Harvesting Standards:</b> Harvesting intervals are maintained below 15 days with minimal crop loss observed. However, frond stacking needs improvement. <span class='observation-ref'>(PAR Pg. 23, 36)</span>",
-                    "<b>Suboptimal Nutrient Status:</b> Foliar analysis shows suboptimal levels of N, P, and Mg. The 2025 fertilizer program has been formulated to address this. <span class='observation-ref'>(AR Pg. 5, 19)</span>",
-                    "<b>Ganoderma Monitoring:</b> Mounding of Ganoderma-infested palms in older fields has stopped; the budget is proposed to be diverted to younger fields. A census is recommended for fields P07B and P09C. <span class='observation-ref'>(PAR Pg. 17, Comments Pg. 3)</span>"
+                    "<b>Financials (PAR):</b> FFB production cost (YTD May '25) is 18% below budget, and the estate is expected to meet its annual yield target. <span class='observation-ref'>(PAR Pg. 35)</span>",
+                    "<b>Manuring Program (PAR & AR):</b> The manuring program is behind schedule due to late fertilizer deliveries. Application quality is acceptable, but supervision is needed to prevent applying fertilizer onto frond stacks, which is inefficient. <span class='observation-ref'>(PAR Pg. 36, AR Pg. 11-12)</span>",
+                    "<b>P&D - Ganoderma (PAR & AR):</b> Ganoderma infection is noted to be increasing. Deboling of infected sites is in progress, addressing the issue raised in the previous report. <span class='observation-ref'>(PAR Pg. 17, AR Pg. 6, 35)</span>",
+                    "<b>P&D - Rats (AR):</b> Rat infestations exceeded thresholds (>20%) in Q2/Q3 but were successfully brought under control (below 10%) after baiting operations. Continuous monitoring is required. <span class='observation-ref'>(AR Pg. 33-34)</span>",
+                    "<b>Harvesting & Pruning (PAR & AR):</b> Harvesting intervals are acceptable (13-18 days). However, premature frond snapping due to water stress was observed, and frond stacking still needs improvement. <span class='observation-ref'>(PAR Pg. 36, AR Pg. 16, 20)</span>",
+                    "<b>Weed Control (AR):</b> While general weeding is satisfactory, new issues of over-spraying in P02A2 and *Lantana camara* infestations in P08F2 require immediate attention. <span class='observation-ref'>(AR Pg. 27-28)</span>",
+                    "<b>Nutrient Status (AR):</b> Foliar analysis confirms suboptimal nutrient levels, with marginally low N, K, and Mg detected in various blocks. The 2026 fertilizer program aims to address this. <span class='observation-ref'>(AR Pg. 24-25, 42)</span>"
                 ],
                 "reports": {
                     "plantation": {
@@ -146,11 +147,11 @@
                         "Immature": "N/A"
                     },
                     "agronomy": {
-                        "Executive Summary": "The agronomic condition is satisfactory, reflected in the strong yield performance. Harvesting and pruning are on schedule and well-managed. The main concerns are suboptimal nutrient levels and the need to monitor pest populations (rats and bagworms). (Source: AR, Pg. 4-6, 33)",
-                        "Nutrient Inputs/Progress of Manuring": "The 2024 manuring program was completed without major delays. The 2025 program is progressing satisfactorily. (Source: AR, Pg. 11-12)",
-                        "Agronomic Observation": "Harvesting standards and crop recovery are good. Pruning is acceptable with no major issues. Ground vegetation is well-managed. Rat damage is below threshold, but bagworm signs were noted. (Source: AR, Pg. 13-29)",
-                        "Yield Performance": "Yield increased by 26.3% in 2024 to 24.89 mt/ha. The positive trend continued in early 2025. (Source: AR, Pg. 30-32)",
-                        "Fertilizer Recommendation": "The 2025 fertilizer program is maintained. A new foliar analysis is recommended for 2025. (Source: AR, Pg. 34)"
+                        "Executive Summary": "Agronomic condition is satisfactory. Yield is 14% below target YTD August 2025, but on an upward trend. The manuring program is behind schedule due to delivery delays, and application quality needs supervision (placement on fronds). Pruning is satisfactory, but premature frond snapping from water stress is a concern. Rat infestations exceeded thresholds but are now under control (<10%). Ganoderma infection is noted to be increasing. (Source: AR, Pg. 4-7, 12, 20, 33, 35, 39)",
+                        "Nutrient Inputs/Progress of Manuring": "The first-half 2025 manuring program completed in July. The second-half program, started in August, is behind schedule due to delayed fertilizer deliveries. Completion is targeted for mid-November. Field assessment showed acceptable application quality, but placement on frond stacks is undesirable and reduces efficiency. Stricter supervision is required. (Source: AR, Pg. 11-12)",
+                        "Agronomic Observation": "<b>Harvesting:</b> Intervals are acceptable at 13-18 days. A small number of over-ripe bunches were detected in P02E1. (Source: AR, Pg. 16, 18)<br><b>Pruning:</b> 100% complete (2/3 rounds) and satisfactory. However, premature frond snapping was observed in P10D and P08F, likely due to water stress from low rainfall (June-Aug). (Source: AR, Pg. 20)<br><b>Nutrient Status:</b> Palm vigour is acceptable. Foliar analysis from March 2025 shows declining Nitrogen (notably in P07B2), marginally low Potassium (B1, B2), and Magnesium deficiency (D1). (Source: AR, Pg. 24-25)<br><b>Weed Control:</b> Satisfactory, with 2/3 rounds completed. Issues include over-spraying in P02A2 (human error) and *Lantana camara* regrowth in P08F2, which needs eradication. (Source: AR, Pg. 27-28)<br><b>P&D:</b> Rat infestations exceeded 20% in Q2/Q3 (P07B, P08F) but were reduced to <10% after baiting. Ganoderma infection signs are increasing (P09C, P08F), and deboling is in progress. (Source: AR, Pg. 33-35)",
+                        "Yield Performance": "YTD August 2025 yield is 15.44 MT/Ha, a 14% deficit compared to the same period last year. P09C performed best (18.78 MT/Ha), while P02E was lowest (17.28 MT/Ha - Note: Table 13 on Pg. 39 has a typo, 13.05 is for 2024). Production has trended upward since March and is expected to peak through October. (Source: AR, Pg. 39-40)",
+                        "Fertilizer Recommendation": "The 2026 fertilizer program has been formulated (Appendix 1) using mixture fertilizers and rock phosphate to meet crop requirements and address nutrient status. (Source: AR, Pg. 42)"
                     },
                     "pinfosys": {
                         "summary": "Not Available."
@@ -179,11 +180,11 @@
                     const colorClass = metric.title.includes('Area') ? 'bg-blue-50 text-blue-800' : 
                                        metric.title.includes('Yield') ? 'bg-green-50 text-green-800' :
                                        metric.title.includes('Cost') ? 'bg-orange-50 text-orange-800' :
-                                       metric.title.includes('Labour') ? 'bg-purple-50 text-purple-800' : 'bg-yellow-50 text-yellow-800';
+                                       metric.title.includes('P&D') ? 'bg-red-50 text-red-800' : 'bg-yellow-50 text-yellow-800';
                     if (metric.lines) {
-                        return `<div class="p-4 rounded-lg ${colorClass}"><h3 class="font-semibold">${metric.title}</h3>${metric.lines.map(line => `<p class="text-sm">${line}</p>`).join('')}</div>`;
+                        return `<div class="p-4 rounded-lg ${colorClass} shadow-sm"><h3 class="font-semibold">${metric.title}</h3>${metric.lines.map(line => `<p class="text-sm">${line}</p>`).join('')}</div>`;
                     }
-                    return `<div class="p-4 rounded-lg ${colorClass}"><h3 class="font-semibold">${metric.title}</h3><p class="text-2xl font-bold">${metric.value}</p><p class="text-xs text-gray-500 mt-1">${metric.note}</p></div>`;
+                    return `<div class="p-4 rounded-lg ${colorClass} shadow-sm"><h3 class="font-semibold">${metric.title}</h3><p class="text-2xl font-bold">${metric.value}</p><p class="text-xs text-gray-500 mt-1">${metric.note}</p></div>`;
                 }).join('');
 
                 const keyMetricsHTML = estate.keyMetrics.map(metric => `
@@ -207,9 +208,9 @@
                         <div class="mb-8"><h3 class="text-xl font-semibold mb-2 border-b pb-2">Key Observations & Issues</h3><ul class="list-disc list-inside space-y-2 text-gray-700 mt-4">${observationsHTML}</ul></div>
                         <div class="mb-8 text-center"><button class="policy-modal-btn bg-green-800 text-white px-6 py-3 rounded-lg hover:bg-green-900 transition shadow-md">View Agricultural Policy Cross-Reference</button></div>
                         <div class="space-y-2">
-                            <button data-dropdown-id="${estate.id}-plantation" class="dropdown-btn w-full text-left bg-gray-800 text-white p-3 rounded-md hover:bg-gray-700 transition">Plantation Advisory Report Details</button>
+                            <button data-dropdown-id="${estate.id}-plantation" class="dropdown-btn w-full text-left bg-gray-800 text-white p-3 rounded-md hover:bg-gray-700 transition">Plantation Advisory Report Details (Jun 2025)</button>
                             <div id="${estate.id}-plantation" class="details-content bg-gray-50 p-4 rounded-md border border-gray-200"></div>
-                            <button data-dropdown-id="${estate.id}-agronomy" class="dropdown-btn w-full text-left bg-gray-800 text-white p-3 rounded-md hover:bg-gray-700 transition">Agronomy Report Details</button>
+                            <button data-dropdown-id="${estate.id}-agronomy" class="dropdown-btn w-full text-left bg-gray-800 text-white p-3 rounded-md hover:bg-gray-700 transition">Agronomy Report Details (Sep 2025)</button>
                             <div id="${estate.id}-agronomy" class="details-content bg-gray-50 p-4 rounded-md border border-gray-200"></div>
                              <button data-dropdown-id="${estate.id}-pinfosys" class="dropdown-btn w-full text-left bg-gray-800 text-white p-3 rounded-md hover:bg-gray-700 transition">Pinfosys Report Details</button>
                             <div id="${estate.id}-pinfosys" class="details-content bg-gray-50 p-4 rounded-md border border-gray-200"></div>
@@ -285,6 +286,7 @@
         function openPolicyModal() {
             const modalTitle = document.getElementById('modalTitle');
             const modalContent = document.getElementById('modalContent');
+            // This data is from the existing PAR and remains unchanged
             const policyData = ` <div class='policy-item'><p class='font-semibold'>Weed Management</p><p class='text-sm text-gray-600'><b>Policy Ref: WEED-CTRL-03:</b> While beneficial ground cover is encouraged, vigorous species like Nephrolepis must be controlled along harvesting paths and palm circles to prevent obstruction to operational activities. (Ref: Comments, Pg. 3)</p></div> <div class='policy-item'><p class='font-semibold'>Manuring Schedule</p><p class='text-sm text-gray-600'><b>Policy Ref: MANURE-APP-01:</b> Fertilizer application must adhere strictly to the established schedule. Any delays must be rectified promptly to ensure timely nutrient uptake and avoid impacting yield. (Ref: Comments, Pg. 3)</p></div> <div class='policy-item'><p class='font-semibold'>Ganoderma Management</p><p class='text-sm text-gray-600'><b>Policy Ref: P&D-GANO-02:</b> A Ganoderma census is mandatory for fields with suspected infection levels. Mounding is recommended if the infection rate exceeds 5% to prolong palm life. (Ref: Comments, Pg. 3)</p></div>`;
             modalTitle.innerText = 'Agricultural Policy Cross-Reference: Ladang Sungai Seraya';
             modalContent.innerHTML = policyData;
